# collision_detection

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Untitled.xcf  blocking_object.cpp  blocking_object.h  camera.cpp  camera.h  constants.h  direction.cpp  direction.h  kdtree.h  main.cpp  shape.cpp  shape.h  simple.xcf  utils.cpp
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  collider.cpp  collider.h  object.cpp  object.h  parameters.h  square.cpp  square.h  timer.h  utils.h
